# soulstruct-havok

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
soulstruct/hkx/: TagToolsDatabase.xml  Types2014.xml  Types2015.xml  converter.py  core.py  databases.py  nodes.py  spline_compression.py  types.py
soulstruct/hkx/objects/: __init__.py  hka.py  hkp.py
soulstruct/hkx/packfile/: __init__.py
soulstruct/hkx/tagfile/: structs.py
soulstruct_havok/: Types2015.xml  __init__.py  _logging.py  core.py  databases.py  enums.py  hkx2015.py  hkx2018.py  hkxml.py  mopp.txt  nodes.py  scripts.py  spline_compression.py  types.py  types_old.py  window.py
soulstruct_havok/fromsoft/: __init__.py
soulstruct_havok/fromsoft/base/: anibnd.py  core.py  type_vars.py  utilities.py
soulstruct_havok/fromsoft/bloodborne/: core.py  physics.py
soulstruct_havok/fromsoft/darksouls1ptde/: __init__.py  core.py
soulstruct_havok/fromsoft/darksouls1r/: __init__.py  anibnd.py  core.py  remobnd.py  retarget.py
soulstruct_havok/fromsoft/demonssouls/: __init__.py  anibnd.py  core.py  utilities.py
soulstruct_havok/fromsoft/eldenring/: __init__.py  anibnd.py  file_types.py
soulstruct_havok/objects/: base.py  hkp.py
soulstruct_havok/packfile/: __init__.py  packer.py  structs.py  type_unpacker.py  unpacker.py
soulstruct_havok/resources/: CollisionTemplate2015.hkx  MapCollisionTemplate550.hkx  MapCollisionTemplate_PTDE.hkx
soulstruct_havok/tagfile/: __init__.py  packer.py  structs.py  unpacker.py
soulstruct_havok/types/: Types2010.xml  Types2015.xml  __init__.py  _create_typing.py  _move_hk.py  base.py  check_2014.py  conversion.py  core.py  create_module.py  debug.py  exceptions.py  hk.py  hk2010.py  hk2014.py  hk2014_base.py  hk2014_new.py  hk2015.py  hk2018.py  hk32.py  hk64.py  info.py  move_hk.py  packfile.py  py_def_builder.py  tagfile.py  type_info_generator.py  typing.pyi
soulstruct_havok/types_dc/: core.py
soulstruct_havok/utilities/: __init__.py  convert_ragdoll.py  hk_conversion.py  maths.py  mesh.py  mopper.py  sibcam_player.py  skeleton_mapping.py  vispy_window.py  wavefront.py
src/soulstruct/havok/: __init__.py  (+6 more)
tests/: _test_compress_anim.py  _test_mopp.py  test_asylum_erdtree_retarget.py  test_chrs.py  test_des_hkx.py  test_des_map_collision.py  test_dsr_map_collision.py  test_hkx.py  test_mopp.py  test_packfile.py  test_tagfile.py
tests/animations/: _test_animations.py
(+3016 files in other folders)
