[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "soulstruct-havok"
description = "Havok tools extension for `soulstruct`."
readme = "README.md"
version = "1.2.1"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"  # maximum allowed for Blender 4.5-5.0 support
keywords = ["modding", "Havok", "FromSoftware", "Dark Souls", "Bloodborne", "Elden Ring", "Sekiro", "Demon's Souls"]
classifiers = [
    "Programming Language :: Python :: 3",
]
authors = [
    { name = "Scott Mooney (Grimrukh)", email = "grimrukh@gmail.com" }
]

dependencies = [
    "soulstruct",
    "constrata>=1.3.1",     # required for binary read/write (my package)
    "numpy",                # required for math classes/operations
    "rich>=13",             # required for nice printing/logging
    "scipy==1.16.3",        # required for additional math classes/operations (e.g. quaternions)
    "typer",                # required for CLI
]

[tool.setuptools.package-data]
"*" = ["*.dll", "*.exe"]  # include embedded DLLs and EXEs in all subpackages

[project.urls]
homepage    = "https://github.com/Grimrukh/soulstruct-havok"
repository  = "https://github.com/Grimrukh/soulstruct-havok"
"Issues"    = "https://github.com/Grimrukh/soulstruct-havok/issues"
